add: integration comparo between rust and java